--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMVPGPPB01"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-FMVPGPPB01');
-</script>
   <meta charset="utf-8">
   <title>$BUTTER</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -48,6 +41,15 @@
             ga('send', 'pageview');
         </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMVPGPPB01"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FMVPGPPB01');
+</script>
 <body class="body">
   <div class="canvas w-embed"><canvas></canvas></div>
   <h1 class="heading">$BUTTER</h1>
