--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body class="body">
   <div class="canvas w-embed"><canvas></canvas></div>
-  <h1 class="heading">$BUTTER</h1>
+  <h1 class="heading">BUTTER</h1>
   <h1 class="heading _22">Coming soon...</h1>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=601a4e39108eb6641311c366" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   
