--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             display: none !important;
             }
         </style>
-
+  <script>
+            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+            ga('create', 'UA-105392568-1', 'auto');
+            ga('send', 'pageview');
+        </script>
 </head>
 <body class="body">
   <div class="canvas w-embed"><canvas></canvas></div>
