--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
-<!DOCTYPE html>
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMVPGPPB01"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+dwdedforked from jonzhep/404
+Cannot fork because you own this repository and are not a member of any organizations.
+Code
+Pull requests
+Actions
+Projects
+Security
+Insights
+Settings
+Pane width
+Use a value between 19% and 30%
 
-  gtag('config', 'G-FMVPGPPB01');
-</script>
-  <meta charset="utf-8">
-  <title>$BUTTER</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/normal2.css" rel="stylesheet" type="text/css">
-  <link href="css/normal.css" rel="stylesheet" type="text/css">
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
-  <script type="text/javascript" src="https://paveldogreat.github.io/WebGL-Fluid-Simulation/dat.gui.min.js"></script>
-  <style>
-            * {
-                user-select: none;
-            }
-            html, body {
-                overflow: hidden;
-                background-color: #000;
-            }
-            body {
-                margin: 0;
-                position: fixed;
-                width: 100%;
-                height: 100%;
-            }
-            canvas {
-                width: 100%;
-                height: 100%;
-            }
-            .dg {
-            display: none !important;
-            }
-        </style>
+23
+Change width
+Code
+Go to file
+t
+css
+fonts
+index.html
+script.jsforked from jonzhep/404
+Cannot fork because you own this repository and are not a member of any organizations.
+Code
+Pull requests
+Actions
+Projects
+Security
+Insights
+Settings
+Pane width
+Use a value between 19% and 30%
 
-</head>
-<body class="body">
-  <div class="canvas w-embed"><canvas></canvas></div>
-  <h1 class="heading">BUTTER</h1>
-  <h1 class="heading _22">Coming soon...</h1>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=601a4e39108eb6641311c366" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  
-  <script src="script.js"></script>
-</body>
-</html>
+23
+Change width
+Code
+Go to file
+t
+css
+fonts
+index.html
+script.jsforked from jonzhep/404
+Cannot fork because you own this repository and are not a member of any organizations.
+Code
+Pull requests
+Actions
+Projects
+Security
+Insights
+Settings
+Pane width
+Use a value between 19% and 30%
+
+23
+Change width
+Code
+Go to file
+t
+css
+fonts
+index.html
+script.js
